# silentclaw

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/operon-adapters/: Cargo.toml
crates/operon-adapters/src/: apply_patch_tool.rs  diff_parser.rs  edit_file_tool.rs  lib.rs  memory_search_tool.rs  python_adapter.rs  read_file_tool.rs  shell_tool.rs  workspace_guard.rs  write_file_tool.rs
crates/operon-adapters/tests/: filesystem_tools_test.rs  python_adapter_test.rs  shell_tool_test.rs
crates/operon-gateway/: Cargo.toml
crates/operon-gateway/src/: auth.rs  lib.rs  rate_limiter.rs  server.rs  session_manager.rs  types.rs
crates/operon-gateway/tests/: auth_and_ratelimit_test.rs  health_and_session_test.rs  test_helpers.rs  websocket_test.rs
crates/operon-plugin-sdk/: Cargo.toml
crates/operon-plugin-sdk/src/: lib.rs
crates/operon-runtime/: Cargo.toml  silentclaw.db
crates/operon-runtime/src/: agent_module.rs  lib.rs  replay.rs  runtime.rs  scheduler.rs  storage.rs  tool.rs
crates/operon-runtime/src/config/: manager.rs  mod.rs
crates/operon-runtime/src/hooks/: events.rs  hook.rs  mod.rs  registry.rs
crates/operon-runtime/src/llm/: anthropic.rs  failover.rs  gemini.rs  mod.rs  openai.rs  provider.rs  streaming.rs  types.rs
crates/operon-runtime/src/memory/: embedding.rs  hybrid_search.rs  indexer.rs  mod.rs  text_search.rs  types.rs  vector_store.rs
crates/operon-runtime/src/plugin/: ffi_bridge.rs  loader.rs  manifest.rs  mod.rs  plugin_trait.rs
crates/operon-runtime/src/tool_policy/: config.rs  layers.rs  mod.rs
crates/operon-runtime/tests/: runtime_integration.rs
crates/warden/: Cargo.toml
crates/warden/src/: cli.rs  config.rs  main.rs
crates/warden/src/commands/: chat.rs  init.rs  mod.rs  plugin.rs  run_plan.rs  serve.rs
crates/warden/tests/: cli_integration.rs
docs/: code-standards.md  codebase-summary.md  known-limitations.md  memory-search-system.md  system-architecture.md
examples/: plan_hello.json
