[package]
name = "operon-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
operon-runtime = { path = "../operon-runtime" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tempfile = "3"
