[package]
name = "operon-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
operon-runtime = { path = "../operon-runtime" }
operon-adapters = { path = "../operon-adapters" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
dashmap = "6"
subtle = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = "1"
http-body-util = "0.1"
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tempfile = "3"
