[package]
name = "operon-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
dashmap = "6"
redb = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
notify = "7"
notify-debouncer-mini = "0.5"
toml = "0.8"
libloading = "0.8"
base64 = "0.22"
eventsource-stream = "0.2"
pin-project-lite = "0.2"

[dev-dependencies]
tempfile = "3"
