[package]
name = "warden"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
operon-runtime = { path = "../operon-runtime" }
operon-adapters = { path = "../operon-adapters" }
operon-gateway = { path = "../operon-gateway" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shellexpand = "3"
